[gd_scene load_steps=9 format=3 uid="uid://cepw0tu4k32r7"]

[ext_resource type="Script" path="res://gui/conversation/conversation_message_template/video_template/video_template2.gd" id="1_r1kj0"]
[ext_resource type="Texture2D" uid="uid://blr65s7n8ro5f" path="res://gui/common/icon/quit-options-menu-button-background.png" id="2_u0eyf"]
[ext_resource type="Texture2D" uid="uid://bthf1by7ghoxo" path="res://gui/common/icon/play-button.png" id="3_wbc88"]
[ext_resource type="Texture2D" uid="uid://o1b2s8jxu852" path="res://gui/common/icon/pause-button.png" id="4_djdvq"]
[ext_resource type="Texture2D" uid="uid://66ofams43f7a" path="res://gui/common/icon/small_dislike-button.png" id="5_7ktvx"]
[ext_resource type="Texture2D" uid="uid://h7pbfndimqrh" path="res://gui/common/icon/small_like-button.png" id="6_aodo6"]
[ext_resource type="Texture2D" uid="uid://b8d4gmkk8anwb" path="res://gui/common/icon/volume-40x40-button.png" id="7_x8uxw"]
[ext_resource type="Texture2D" uid="uid://ca5sx3ah28hgc" path="res://gui/common/icon/mute-40x40-button.png" id="8_6xopb"]

[node name="VideoTemplate" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 158.0
grow_horizontal = 2
script = ExtResource("1_r1kj0")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_u0eyf")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VideoLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "视频名字"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VideoTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("3_wbc88")
texture_pressed = ExtResource("4_djdvq")
ignore_texture_size = true
stretch_mode = 5

[node name="LikeButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("5_7ktvx")
texture_pressed = ExtResource("6_aodo6")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MuteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("7_x8uxw")
texture_pressed = ExtResource("8_6xopb")
ignore_texture_size = true
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="NowTime" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"

[node name="TimeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="TotalTime" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "03:26
"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="FFmpegMediaPlayer" type="FFmpegMediaPlayer" parent="."]
unique_name_in_owner = true

[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/LikeButton" to="." method="_on_like_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/VolumeSlider" to="." method="_on_h_slider_2_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/TimeSlider" to="." method="_on_time_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/TimeSlider" to="." method="_on_time_slider_drag_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
